Add interactive chatbot, styles, and backend Logic

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ sub/TermRecTransformer.pt
 sub/keyword_initial_embeddings.npy
 edu_rec_sys/data/df_student_grades_all.pkl
 edu_rec_sys/data/encoded_student_data.pkl
+
+.env
